<resources>
    <string name="DashROM">System Storage</string>
    <string name="DashInternalStorage">Internal Storage</string>
    <string name="DashExternalStorage">External Storage</string>
    <string name="DashBattery">Battery</string>
    <string name="DashBatteryCharging">Battery (Charging)</string>
    <string name="DashCPU">CPU</string>
    <string name="DashSensor">Sensors</string>
    <string name="DashSensorStatus">Available</string>
    <string name="DashApp">All Apps</string>
    <string name="DashAppStatus">Installed</string>
    <string name="ZeroPerc" translatable="false">0%</string>
    <string name="imgRAM">RAM Logo</string>
    <string name="imgInternalStorage">Internal Storage Logo</string>
    <string name="imgExternalStorage">External Storage Logo</string>
    <string name="imgBattery">Battery Logo</string>
    <string name="imgCPU">CPU Logo</string>
    <string name="imgROM">ROM Logo</string>
    <string name="app_name">Device Info</string>
    <string name="package_name" translatable="false">com.ytheekshana.deviceinfo</string>
    <string name="app_description">Device Info is a simple and powerful Android application which gives you complete information about your Mobile device with advanced user interfaces</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export</string>
    <string name="action_about">About</string>
    <string name="action_rate">Rate App</string>
    <string name="action_donate">Donate</string>
    <string name="action_search">Search</string>
    <string name="app_author" translatable="false">Yasiru Nayanajith</string>
    <string name="app_cover_photo">Cover Picture</string>
    <string name="dashboard">Dashboard</string>
    <string name="device">Device</string>
    <string name="system">System</string>
    <string name="cpu">CPU</string>
    <string name="battery">Battery</string>
    <string name="display">Display</string>
    <string name="memory">Memory</string>
    <string name="camera">Camera</string>
    <string name="thermal">Thermal</string>
    <string name="sensors">Sensors</string>
    <string name="apps">Apps</string>
    <string name="tests">Tests</string>
    <string name="DeviceName">Device Name</string>
    <string name="Model">Model</string>
    <string name="Manufacturer">Manufacturer</string>
    <string name="Board">Board</string>
    <string name="Hardware">Hardware</string>
    <string name="Brand">Brand</string>
    <string name="DeviceType">Device Type</string>
    <string name="AndroidDeviceID">Android Device ID</string>
    <string name="IMEI">IMEI</string>
    <string name="HardwareSerial">Hardware Serial</string>
    <string name="SIMSerial">SIM Serial</string>
    <string name="SIMSubscriber">SIM Subscriber</string>
    <string name="NetworkOperator">Network Operator</string>
    <string name="NetworkType">Network Type</string>
    <string name="WiFiMac">WiFi MAC Address</string>
    <string name="BluetoothMac">Bluetooth MAC Address</string>
    <string name="BuildFingerprint">Build Fingerprint</string>
    <string name="usbHost">USB Host</string>
    <string name="GrantPermission">Click to Grant Permission</string>
    <string name="CodeName">Code Name</string>
    <string name="APILevel">API Level</string>
    <string name="SecurityPatchLevel">Security Patch Level</string>
    <string name="Bootloader">Bootloader</string>
    <string name="BuildNumber">Build Number</string>
    <string name="Baseband">Baseband</string>
    <string name="Kernel">Kernel</string>
    <string name="OpenGL">OpenGL ES</string>
    <string name="RootAccess">Root Access</string>
    <string name="SELinux">SELinux</string>
    <string name="Uptime">System Uptime</string>
    <string name="Language">Language</string>
    <string name="Processor">Processor</string>
    <string name="ABIs">Supported ABIs</string>
    <string name="CPUHardware">CPU Hardware</string>
    <string name="CPUGovernor">CPU Governor</string>
    <string name="Cores">Cores</string>
    <string name="CPUFrequency">CPU Frequency</string>
    <string name="CPUUsage">CPU Usage</string>
    <string name="RunningCPUs">Running CPUs</string>
    <string name="GPURenderer">GPU Renderer</string>
    <string name="GPUVendor">GPU Vendor</string>
    <string name="GPUVersion">GPU Version</string>
    <string name="Health">Health</string>
    <string name="Temperature">Temperature</string>
    <string name="Technology">Technology</string>
    <string name="Voltage">Voltage</string>
    <string name="Status">Status</string>
    <string name="Level">Level</string>
    <string name="PowerSource">Power Source</string>
    <string name="Capacity">Capacity</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="battery_full">Battery Full</string>
    <string name="not_charging">Not Charging</string>
    <string name="usb_port">USB Port</string>
    <string name="ac">AC</string>
    <string name="cold">Cold</string>
    <string name="dead">Dead</string>
    <string name="good">Good</string>
    <string name="over_voltage">Over Voltage</string>
    <string name="overheat">Overheat</string>
    <string name="Resolution">Resolution</string>
    <string name="Density">Density</string>
    <string name="FontScale">Font Scale</string>
    <string name="PhysicalSize">Physical Size</string>
    <string name="RefreshRate">Refresh Rate</string>
    <string name="brightnessLevel">Brightness Level</string>
    <string name="brightnessMode">Brightness Mode</string>
    <string name="screenTimeout">Screen Timeout</string>
    <string name="Orientation">Orientation</string>
    <string name="adaptive">Adaptive</string>
    <string name="manual">Manual</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="RAM">Random Access Memory</string>
    <string name="ROM">System Storage</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="ExternalStorage">External Storage</string>
    <string name="about_shortcut_short_label">About</string>
    <string name="about_shortcut_long_label">About</string>
    <string name="about_disabled_message">Shortcut Disabled</string>
    <string name="donate_shortcut_short_label">Donate</string>
    <string name="donate_shortcut_long_label">Donate</string>
    <string name="donate_disabled_message">Shortcut Disabled</string>
    <string name="settings_shortcut_short_label">Settings</string>
    <string name="settings_shortcut_long_label">Settings</string>
    <string name="settings_disabled_message">Shortcut Disabled</string>
    <string name="rooted">Root Access Available</string>
    <string name="not_rooted">Root Access Not Available</string>
    <string-array name="app_type">
        <item>User Apps</item>
        <item>System Apps</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_splash">Device Info</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_about">About</string>
    <string name="test_failed">Test Failed</string>
    <string name="test_passed">Test Passed</string>
    <string name="display_test">Display</string>
    <string name="display_test_status">Display Test Status</string>
    <string name="display_test_description">Display may turn black, white, red, green and blue. Look for different colored pixels and tap to continue</string>
    <string name="display_test_question">Were the screen one solid color?</string>
    <string name="flashlight_test">Flashlight</string>
    <string name="flashlight_test_status">Flashlight Test Status</string>
    <string name="flashlight_test_question">Is the flashlight working?</string>
    <string name="loudspeaker_test">Loudspeaker</string>
    <string name="loudspeaker_test_status">Loudspeaker Test Status</string>
    <string name="loudspeaker_test_question">Audio is playing. Can you hear it?</string>
    <string name="earspeaker_test">Ear Speaker</string>
    <string name="earspeaker_test_status">Ear Speaker Test Status</string>
    <string name="earspeaker_test_question">Audio is playing. Can you hear it?</string>
    <string name="earproximity_test">Ear Proximity</string>
    <string name="earproximity_test_status">Ear Proximity Test Status</string>
    <string name="earproximity_test_question">Cover the area above the display. Is the illustration changing?</string>
    <string name="lightsensor_test">Light Sensor</string>
    <string name="lightsensor_test_status">Light Sensor Test Status</string>
    <string name="lightsensor_test_question">Cover the area above the display. Is the value changing?</string>
    <string name="lightsensor_default_value">Default Lux</string>
    <string name="vibration_test">Vibration</string>
    <string name="vibration_test_status">Vibration Test Status</string>
    <string name="vibration_test_question">Can you feel the phone vibrating?</string>
    <string name="wifi_test">Wi-Fi</string>
    <string name="wifi_test_status">Wi-Fi Test Status</string>
    <string name="wifi_test_start">Starting Wifi</string>
    <string name="bluetooth_test">Bluetooth</string>
    <string name="bluetooth_test_status">Bluetooth Test Status</string>
    <string name="bluetooth_test_start">Starting Bluetooth</string>
    <string name="fingerprint_test">Fingerprint Test</string>
    <string name="place_your_finger">Place your finger on the sensor</string>
    <string name="place_enrolled_finger">Place an enrolled finger on the fingerprint sensor to pass the test. Please enroll a finger if you haven\'t.</string>
    <string name="volumeup_test">Volume Up Button</string>
    <string name="volumeup_test_status">Volume Up Button Test Status</string>
    <string name="volumeup_test_question">Press the volume up key, do you get any feedback?</string>
    <string name="volumedown_test">Volume Down Button</string>
    <string name="volumedown_test_status">Volume Down Button Test Status</string>
    <string name="volumedown_test_question">Press the volume down key, do you get any feedback?</string>
    <string name="review_no_thanks">No, Thanks</string>
    <string name="review_ok_sure">OK, Sure</string>
    <string name="review_how_about_a_rating">How about a rating on the Play Store?</string>
    <string name="review_enjoying_device_info">Enjoying Device Info ?</string>
    <string name="review_not_really">Not Really</string>
    <string name="review_yes">Yes!</string>
    <string name="unknown">Unknown</string>
    <string name="file_chooser_title">Select Extract Folder</string>
    <string name="file_chooser_choose">Choose Folder</string>
    <string name="donate_coffee_title">Cup of Coffee</string>
    <string name="dark_theme_disabled">Dark Theme Disabled</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="select_an_accent_color">Select an Accent Color</string>
    <string name="accent_color">Accent Color</string>
    <string name="app_backup">App Backup</string>
    <string name="default_extract_path" translatable="false">/emulated/0/DeviceInfo</string>
    <string name="extract_location">Extract Location</string>
    <string name="save_to_text_file">Save your device information to a text file</string>
    <string name="support_us">Support Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="enjoying_device_info">Enjoying Device Info? Would you mind giving us some feedback on Google Play Store</string>
    <string name="donate_summary">You can show your appreciation for my work by making a small donation</string>
    <string name="donate_support_development">Donate (Support Development)</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="export_data">Export Data</string>
</resources>